--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,11 @@ lto = true
 codegen-units = 1
 strip = true
 panic = "abort"
+
+[lints.clippy]
+type-complexity = "allow"
+too-many-arguments = "allow"
+double-parens = "allow"
+
+[lints.rust]
+unused_parens = "allow"
